[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_right = 379.0
margin_bottom = 394.0
color = Color( 0.411765, 0.666667, 0.87451, 1 )

[node name="ColorRect3" type="ColorRect" parent="."]
margin_left = 378.0
margin_top = 1.0
margin_right = 1022.0
margin_bottom = 393.0
color = Color( 0.262745, 0.501961, 0.733333, 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_top = 344.0
margin_right = 1024.0
margin_bottom = 598.0

[node name="Lista preenchida" type="Button" parent="."]
margin_left = 111.0
margin_top = 126.0
margin_right = 228.0
margin_bottom = 189.0
text = "Lista preenchida"

[node name="Lista Vazia" type="Button" parent="."]
margin_left = 781.0
margin_top = 149.0
margin_right = 906.0
margin_bottom = 199.0
text = "Lista completa"

[node name="Label" type="Label" parent="."]
margin_left = 437.0
margin_top = 79.0
margin_right = 659.0
margin_bottom = 99.0
text = "Digite aqui os valores da sua lista:"

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 685.0
margin_top = 70.0
margin_right = 775.0
margin_bottom = 108.0

[node name="adicionar valores" type="Button" parent="."]
margin_left = 470.0
margin_top = 152.0
margin_right = 667.0
margin_bottom = 197.0
text = "Adicionar o valor à lista"

[node name="Label2" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 240.0
margin_top = 365.0
margin_right = 804.0
margin_bottom = 443.0
text = "Suas listas aparecerão aqui:"
align = 1

[node name="resultado" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 231.0
margin_top = 434.0
margin_right = 795.0
margin_bottom = 512.0
align = 1

[node name="Limpar lista" type="Button" parent="."]
margin_left = 672.0
margin_top = 227.0
margin_right = 785.0
margin_bottom = 281.0
text = "Limpar lista"

[connection signal="pressed" from="Lista preenchida" to="." method="_on_Lista_preenchida_pressed"]
[connection signal="pressed" from="Lista Vazia" to="." method="_on_Lista_Vazia_pressed"]
[connection signal="pressed" from="adicionar valores" to="." method="_on_adicionar_valores_pressed"]
[connection signal="pressed" from="Limpar lista" to="." method="_on_Limpar_lista_pressed"]
